--- a/layout i zasoby/layout i zasoby.csproj
+++ b/layout i zasoby/layout i zasoby.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Caliburn.Micro" Version="4.0.173" />
+  </ItemGroup>
+
 </Project>
